crates/loxia-tui/src/views/snapshots/loxia_tui__views__folders__tests__empty_folder_snapshot.snap
---
source: crates/loxia-tui/src/views/folders.rs
assertion_line: 153
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 24 },
    content: [
        "┌Folders───────────────────────────────────────────────────┐            ┌──────────────┐            ",
        "│                                                          │            │              │            ",
        "│                                                          │            │              │            ",
        "│                                                          │            │              │            ",
        "│                                                          │            │       ♪      │            ",
        "│                                                          │            │              │            ",
        "│                                                          │            │              │            ",
        "│                                                          │            └──────────────┘            ",
        "│                                                          │—                                       ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│       nothing here — no audio files in this folder       │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "│                                                          │                                        ",
        "└──────────────────────────────────────────────────────────┘                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 1, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 88, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 20, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 21, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 22, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
